--- a/api-def/uniwebview.toml
+++ b/api-def/uniwebview.toml
@@ -1119,11 +1119,15 @@ returnType = "void"
 summary = """
 Sets whether the drag interaction should be enabled on iOS.
 
-From iOS 11, the iPad web view supports the drag interaction when user long presses an image, link or text.
+From iOS 11, the web view on iOS supports the drag interaction when user long presses an image, link or text.
 Setting this to `false` would disable the drag feather on the web view.
+    ///
+On Android, there is no direct native way to disable drag only. This method instead disables the long touch
+event, which is used as a trigger for drag interaction. So, setting this to `false` would disable the long
+touch gesture as a side effect. 
 
-This method only works on iOS. It does nothing on Android or macOS editor. Default is `true`, which means
-drag interaction on iPad is enabled.
+It does nothing on macOS editor. Default is `true`, which means drag interaction is enabled if the device and
+system version supports it.
 """
 example = """
 ```csharp
@@ -1135,10 +1139,6 @@ webView.SetDragInteractionEnabled(false);
 name = "enabled"
 type = "bool"
 summary = "Whether the drag interaction should be enabled."
-[[Methods.badges]]
-name = "iOS"
-color = "orange"
-
 
 [[Methods]]
 name = "CleanCache"
