--- a/api-def/UniWebViewEmbeddedToolbar.toml
+++ b/api-def/UniWebViewEmbeddedToolbar.toml
@@ -22,6 +22,13 @@ Sets the position of the embedded toolbar. You can put the toolbar at either top
 
 The default position is `Top`.
 """
+example = """
+```csharp
+// Sets the web view shows the toolbar at the bottom.
+webView.EmbeddedToolbar.SetPosition(UniWebViewToolbarPosition.Bottom);
+webView.EmbeddedToolbar.Show();
+```
+"""
 [[Methods.parameters]]
 name = "position"
 type = "UniWebViewToolbarPosition"
@@ -34,6 +41,11 @@ returnType = "void"
 summary = """
 Shows the toolbar.
 """
+example = """
+```csharp
+webView.EmbeddedToolbar.Show();
+```
+"""
 
 [[Methods]]
 name = "Hide"
@@ -41,6 +53,11 @@ syntax = "Hide()"
 returnType = "void"
 summary = """
 Hides the toolbar.
+"""
+example = """
+```csharp
+webView.EmbeddedToolbar.Hide();
+```
 """
 
 [[Methods]]
@@ -51,6 +68,11 @@ summary = """
 Sets the text of the done button. 
 
 The default text is "Done".
+"""
+example = """
+```csharp
+webView.EmbeddedToolbar.SetDoneButtonText("关闭");
+```
 """
 [[Methods.parameters]]
 name = "text"
@@ -66,6 +88,11 @@ Sets the text of the back button.
 
 The default text is "❮" ("\u276E").
 """
+example = """
+```csharp
+webView.EmbeddedToolbar.SetDoneButtonText("返回");
+```
+"""
 [[Methods.parameters]]
 name = "text"
 type = "string"
@@ -79,6 +106,11 @@ summary = """
 Sets the text of the forward button.
 
 The default text is "❯" ("\u276F").
+"""
+example = """
+```csharp
+webView.EmbeddedToolbar.SetDoneButtonText("前进");
+```
 """
 [[Methods.parameters]]
 name = "text"
@@ -95,6 +127,11 @@ Sets the text of toolbar title.
 The default is empty. The space is limited, setting a long text as title might
 not fit in the space.
 """
+example = """
+```csharp
+webView.EmbeddedToolbar.SetDoneButtonText("My Game");
+```
+"""
 [[Methods.parameters]]
 name = "text"
 type = "string"
@@ -106,6 +143,11 @@ syntax = "SetBackgroundColor(Color color)"
 returnType = "void"
 summary = """
 Sets the background color of the toolbar.
+"""
+example = """
+```csharp
+webView.EmbeddedToolbar.SetBackgroundColor(Color.yellow);
+```
 """
 [[Methods.parameters]]
 name = "color"
@@ -121,6 +163,11 @@ Sets the buttons color of the toolbar.
 
 This color affects the back, forward and done button.
 """
+example = """
+```csharp
+webView.EmbeddedToolbar.SetButtonTextColor(Color.red);
+```
+"""
 [[Methods.parameters]]
 name = "color"
 type = "Color"
@@ -132,6 +179,11 @@ syntax = "SetTitleTextColor(Color color)"
 returnType = "void"
 summary = """
 Sets the text color of the toolbar title. 
+"""
+example = """
+```csharp
+webView.EmbeddedToolbar.SetTitleTextColor(Color.blue);
+```
 """
 [[Methods.parameters]]
 name = "color"
@@ -147,6 +199,12 @@ Hides the navigation buttons on the toolbar.
 
 When called, the back button and forward button will not be shown. 
 By default, the navigation buttons are shown.
+"""
+example = """
+```csharp
+// Do not show the navigation buttons (go back and go forward).
+webView.EmbeddedToolbar.HideNavigationButtons();
+```
 """
 
 [[Methods]]
