--- a/api-def/UniWebViewAuthenticationFlowGitHub.toml
+++ b/api-def/UniWebViewAuthenticationFlowGitHub.toml
@@ -103,6 +103,31 @@ Whether or not unauthenticated users will be offered an option to sign up for Gi
 Default is `true`.
 """
 
+[[Properties]]
+name = "optional.prompt"
+returnType = "string"
+hasSetter = true
+summary = """
+The prompt that will be set to the authentication request query. For example, the possible values can be `login`, 
+`consent`, `select_account` and so on.
+
+See https://openid.net/specs/openid-connect-core-1_0.html#AuthRequest
+"""
+
+[[Properties]]
+name = "optional.additionalAuthenticationUriQuery"
+returnType = "string"
+hasSetter = true
+summary = """
+The additional query arguments that are used to construct the query string of the authentication request.
+
+This is useful when you want to add some custom parameters to the authentication request. This string will be 
+appended to the query string that constructed from `GetAuthenticationUriArguments`. 
+
+For example, if you set the value to `prompt=consent&ui_locales=en`, it will be contained in the final authentication 
+query.
+"""
+
 [[Events]]
 name = "OnAuthenticationFinished"
 syntax = "OnAuthenticationFinished"
