--- a/api-def/uniwebview.toml
+++ b/api-def/uniwebview.toml
@@ -909,6 +909,8 @@ Default is `true`.
 notice = """
 This method is only for Android. On iOS, the keyboard avoidance is built into the system directly and there is 
 no way to change its behavior.
+
+You need to set it before creating a web view. Existing web views are not affected.
 """
 example = """
 ```csharp
